# cpp_calculator

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
includes/: input.h  math.h
modules/: input.cpp  math.cpp
